Expanded Cheat Menu:
Minor error spamming log.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1284,7 +1284,7 @@ Not noticeable unless using higher zoom.",
 302535920001259,"Copies all mod files to AppData/ModUpload, uncheck to copy files manually.",
 302535920001260,Blank Mod,
 302535920001261,"Uploads a blank private mod to Steam Workshop, and prints Workshop id in log.",
-302535920001262,"""AppData/ModUpload"" folder is empty and waiting for insert.",
+302535920001262,"""AppData/ModUpload"" folder is empty and waiting for files.",
 302535920001263,"Mod author name is different from your name, do you have permission to upload this mod?",
 302535920001244,"Saves settings to file, and applies any changes.",
 302535920001245,Abort without touching anything.,
