Expanded Cheat Menu:
Changed:
Cheat menu buttons work with utf now.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,4 +1,9 @@
 ID,Text,Translation,Old Translation,Gender
+302535920000345,,
+302535920001280,,
+302535920001281,,
+302535920001282,,
+302535920001283,,
 302535920001284,,
 302535920001285,,
 302535920001286,,
@@ -19,10 +24,6 @@ ID,Text,Translation,Old Translation,Gender
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
-302535920001280,Cheats,
-302535920001281,Game,
-302535920001282,Help,
-302535920001283,Debug,
 302535920001167,Use Ctrl/Shift for multiple selection.,
 302535920000855,Last chance before deletion!,
 302535920000800,MaleOrFemale,
@@ -449,7 +450,6 @@ Doesn't work with domes.",
 302535920000342,Updates all colonist's workplaces.,
 302535920000343,Clear Forced Workplaces,
 302535920000344,"Removes ""user_forced_workplace"" from all colonists.",
-302535920000345,Research Tech,
 302535920000346,Pick what you want to unlock/research.,
 302535920000348,Allow more items in queue.,
 302535920000349,Reset All Research,
@@ -883,7 +883,7 @@ Use Editor Mode and mouse drag to select multiple objects for deletion.",
 
 Attention: If you get yellow ground areas; just load it again.
 
-The map disaster settings don't do jack.",
+The map disaster settings don't do jack (use ECM>Mission>Disasters).",
 302535920000495,Particles Reload,
 302535920000496,"Reloads particles from ""Data/Particles""...",
 302535920000497,Toggle Terrain Deposit Grid,
