Expanded Cheat Menu:
Changed:
Added Metatron Ion Storm to Start Disasters.
Fuzting around with dome stats: No menu item yet, toggle with ChoGGi.MenuFuncs.ViewDomeInfo_Toggle().

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,4 +1,6 @@
 ID,Text,Translation,Old Translation,Gender
+302535920000251,Metatron Ion Storm,
+302535920000333,,
 302535920000345,,
 302535920001280,,
 302535920001281,,
@@ -439,8 +441,7 @@ Doesn't work with domes.",
 302535920000330,Advance to next part or remove mysteries.,
 302535920000331,Start Mystery,
 302535920000332,Pick and start a mystery (with instant start option).,
-302535920000333,Trigger Disasters,
-302535920000334,Show the trigger disasters list.,
+302535920000334,Show the disasters list and optionally start one.,
 302535920000336,Spawn certain amount of colonists.,
 302535920000337,Unlock all buildings,
 302535920000338,Unlock all buildings for construction.,
@@ -485,7 +486,6 @@ Buildings are still unlocked.",
 302535920000245,Meteor Multi-Spawn,
 302535920000246,Missle,
 302535920000250,Might be a little laggy,
-302535920000251,Trigger Disaster,
 302535920000252,"Targeted to mouse cursor (use arrow keys to select and enter to start, Ctrl/Shift to multi-select).",
 302535920000253,"Core: Repeatable, exploit core resources.",
 302535920000254,"Deep: Toggleable, exploit deep resources.",
