Expanded Cheat Menu:
Added:
Help>Text: Stats = hardware info, Game & Map Info = lists objects, and shows log.

Changed:
ECM>Building Info

Fixed:
Examine now shows CObject functions on objects that don't include Object.
The Soylent Option was doing birthplace Indian instead of race Indian.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,12 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000251,Metatron Ion Storm,
-302535920000333,,
-302535920000345,,
-302535920001280,,
-302535920001281,,
-302535920001282,,
-302535920001283,,
-302535920001284,,
 302535920001285,,
 302535920001286,,
 302535920001287,,
@@ -87,6 +79,10 @@ Press ~ or Enter and click the ""Console"" button to toggle showing console log 
 302535920000793,History,
 302535920000881,"Place .lua files in %s to have them show up in the ""Scripts"" list, you can then use the list to execute them (you can also create folders for sorting).",
 302535920000888,Any .lua files in here will be part of a list that you can execute in-game from the console menu.,
+302535920000739,Black,
+302535920000740,Asian,
+302535920001283,Indian,
+302535920001284,Southeast Asian,
 302535920000006,Failed to save settings to %s : %s,
 302535920000007,"Problem loading AppData/Surviving Mars/CheatMenuModSettings.lua
 If you can delete it and still get this error; please send it and this log to the author.",
@@ -120,7 +116,7 @@ You can copy and paste numbers if you want (click item again after picking).",
 302535920000247,Startup ticks,
 302535920000729,You've started a mystery!,
 302535920000730,You've chosen a mystery!,
-302535920000731,Deutsche Gesellschaft für Rassenhygiene,
+302535920000731,Deutsche Gesellschaft fÃ¼r Rassenhygiene,
 302535920000732,"Childkiller: You evil, evil person.",
 302535920000733,Open a preset in the editor.,
 302535920000735,Timer delay skipped,
@@ -424,6 +420,7 @@ Use with Remove Building Limits to fill up a dome with spires.",
 Doesn't work with domes.",
 302535920000230,Remove Building Limits,
 302535920000231,"Buildings can be placed almost anywhere (I left uneven terrain blocked, and pipes don't like domes).",
+302535920000251,Metatron Ion Storm,
 302535920001278,Instant Research,
 302535920001279,Instantly research anything you click.,
 302535920000305,Research Queue Size,
@@ -574,8 +571,6 @@ Best hope you picked India as your Mars sponsor...",
 302535920000736,"%s: Whoops somebody broke the rocket, guess you're stuck on mars.",
 302535920000737,%s: Water? Like out of the toilet?,
 302535920000738,Evil Overlord,
-302535920000739,Birthplace,
-302535920000740,Gender,
 302535920000741,Race,
 302535920000742,"Congratulations! You've been awarded the Childkiller title.
 
@@ -985,6 +980,9 @@ The map disaster settings don't do jack (use ECM>Mission>Disasters).",
 302535920000550,RC Rover quick Transfer/Gather resources.,
 302535920000551,RC Transport Storage Capacity,
 302535920000552,Change amount of resources RC Transports can carry.,
+302535920000333,Building Info,
+302535920000345,Shows info about building in text above it.,
+302535920001280,Double-click to toggle text (updates every second).,
 302535920000126,Locked From Resupply View,
 302535920000567,Worker Capacity,
 302535920001272,Updated,
@@ -1275,6 +1273,8 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920001281,Information about your computer (as seen by SM).,
+302535920001282,Information about this saved game (mostly objects).,
 302535920000892,Screenshot,
 302535920000893,Interface,
 302535920000367,Mod Upload,
