Expanded Cheat Menu:
Code cleanup.

Fixed:
Most of the Game>Render options ignored "Default" setting.
Focus away from edit boxes is improved.
Some messed up strings.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,4 +1,8 @@
 ID,Text,Translation,Old Translation,Gender
+302535920000123,Stops most disasters,
+302535920000242,,
+302535920000243,,
+302535920000244,,
 302535920001285,,
 302535920001286,,
 302535920001287,,
@@ -291,7 +295,6 @@ Where the fear has gone there will be nothing. Only I will remain.",
 302535920000122,You need to select a building that has capacity (air/water/elec).,
 302535920000121,You need to select a building that uses water.,
 302535920001250,You need to select a building that uses oxygen.,
-302535920000123,Defaults,
 302535920000124,Charge,
 302535920000125,Discharge,
 302535920000127,Rate,
@@ -475,12 +478,9 @@ This will switch to a new map.",
 302535920000238,"Are you sure you want to reset all research (includes breakthrough tech)?
 
 Buildings are still unlocked.",
-302535920000240,Stop Most Disasters,
-302535920000241,Dust Devil Major,
-302535920000242,Dust Devil,
-302535920000243,Dust Storm Electrostatic,
-302535920000244,Dust Storm Great,
-302535920000245,Meteor Multi-Spawn,
+302535920000240,Stop,
+302535920000241,Major,
+302535920000245,Multi-Spawn,
 302535920000246,Missle,
 302535920000250,Might be a little laggy,
 302535920000252,"Targeted to mouse cursor (use arrow keys to select and enter to start, Ctrl/Shift to multi-select).",
