--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,15 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000123,Stops most disasters,
-302535920000242,,
-302535920000243,,
-302535920000244,,
-302535920001285,,
-302535920001286,,
-302535920001287,,
-302535920001288,,
-302535920001289,,
-302535920001290,,
-302535920001291,,
 302535920001292,,
 302535920001293,,
 302535920001294,,
@@ -22,6 +11,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920000242,Modify ECM Files,
 302535920001167,Use Ctrl/Shift for multiple selection.,
 302535920000855,Last chance before deletion!,
 302535920000800,MaleOrFemale,
@@ -94,6 +84,12 @@ If you can delete it and still get this error; please send it and this log to th
 302535920000009,Missing Scenario Name,
 302535920000010,Missing Name,
 302535920000011,Missing Description,
+302535920001291,Cancel: Use Files.hpk after you restart.,
+302535920001290,OK: Overwrite old files!,
+302535920001289,"ECM was updated and you are using the older files in ""%s"".
+Press OK to update files (backup your changed files first).
+
+ECM is stuck on the older files till you restart.",
 302535920001267,%s at position: %s was stopped.,
 302535920000967,Nothing selected.,
 302535920000968,Collisions,
@@ -423,6 +419,7 @@ Use with Remove Building Limits to fill up a dome with spires.",
 Doesn't work with domes.",
 302535920000230,Remove Building Limits,
 302535920000231,"Buildings can be placed almost anywhere (I left uneven terrain blocked, and pipes don't like domes).",
+302535920000123,Stops most disasters,
 302535920000251,Metatron Ion Storm,
 302535920001278,Instant Research,
 302535920001279,Instantly research anything you click.,
@@ -1273,6 +1270,15 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920000243,"Extracts Files.hpk to ""%s"".
+You can then edit the files for use with ECM, or your mod (don't forget to include my LICENSE file).",
+302535920000244,Extract,
+302535920001285,Clean up,
+302535920001286,"Extract will make ECM use lua files in ""%s"" instead of Files.hpk.
+ECM files contained within will be overwritten (easier for me when there's an update).",
+302535920001287,"Clean up will remove ""%sTheIncal.tga"", and ECM will go back to using Files.hpk.",
+302535920001288,"Restart ECM for any changes to take effect.
+When ECM version is changed ""Clean up"" will occur.",
 302535920001281,Information about your computer (as seen by SM).,
 302535920001282,Information about this saved game (mostly objects).,
 302535920000892,Screenshot,
