--- a/Mods ChoGGi/Replace Cursors/changes.txt
+++ b/Mods ChoGGi/Replace Cursors/changes.txt
@@ -1,4 +1,8 @@
+v0.4
+Changed cursors to grayscale (hopefully still fixes issue). See Mod folder\Replacements.
+Mod now checks SM profile folder\Cursors for custom cursors.
+Changes loading icon (not immediately).
 v0.3
 Forgot to test on a new game (it also doesn't work for some of the cmd center buttons, but I stopped caring).
 v0.2
-Missed a HUD elements.
+Missed some HUD elements.
