Expanded Cheat Menu:
Added:
Game>List All Objects: A list of objects; double-click on one to select and move the camera to it.

Changed:
Examine shows length of index based tables/objlists in caption.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,7 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001292,,
-302535920001293,,
-302535920001294,,
 302535920001295,,
 302535920001296,,
 302535920001297,,
@@ -11,6 +8,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920000306,Everything,
 302535920000242,Modify ECM Files,
 302535920001167,Use Ctrl/Shift for multiple selection.,
 302535920000855,Last chance before deletion!,
@@ -542,7 +540,6 @@ Best hope you picked India as your Mars sponsor...",
 302535920000302,%s: S M R T,
 302535920000303,BreakThroughs Allowed,
 302535920000304,%s: Nerdgasm,
-302535920000306,Everything,
 302535920000307,All the tech/breakthroughs/mysteries,
 302535920000308,All Tech,
 302535920000309,All the regular tech,
@@ -1139,6 +1136,9 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000620,If any colonists are black cubes click this.,
 302535920000621,Align All Buildings To Hex Grid,
 302535920000622,If you have any buildings that aren't aligned to the hex grids use this.,
+302535920001292,List All Objects,
+302535920001293,A list of objects; double-click on one to select and move the camera to it.,
+302535920001294,Laggy,
 302535920000629,UI Transparency,
 302535920000637,Video Memory,
 302535920000635,Terrain Detail,
