Expanded Cheat Menu:
Added:
Fixes>Drones Not Repairing Domes: If your drones are just dumping polymers into the centre of your dome.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001295,,
-302535920001296,,
 302535920001297,,
 302535920001298,,
 302535920001299,,
@@ -1056,6 +1054,8 @@ Mechanized: 1,000,000",
 302535920000578,Change waste storage depot capacity.,
 302535920000579,Storage Mechanized Depots,
 302535920000580,Change mechanized depot storage capacity.,
+302535920001295,Drones Not Repairing Domes,
+302535920001296,If your drones are just dumping polymers into the centre of your dome.,
 302535920000922,Fixes,
 302535920000935,Most,
 302535920000938,Toggles,
