Expanded Cheat Menu:
Added:
Debug>Toggle Flight Grid: Shows a square grid with terrain/objects shape.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,6 +1,6 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001297,,
-302535920001298,,
+302535920001297,Toggle Flight Grid,
+302535920001298,Shows a square grid with terrain/objects shape.,
 302535920001299,,
 302535920001300,,
 302535920000887,ECM,
