Expanded Cheat Menu:
Code cleanup.

Added:
Fixes>Toggle Working On All Buildings: Does what it says (on n off, or off n on).

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,8 +1,56 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001297,Toggle Flight Grid,
-302535920001298,Shows a square grid with terrain/objects shape.,
-302535920001299,,
-302535920001300,,
+302535920000970,,
+302535920000972,,
+302535920001301,,
+302535920001302,,
+302535920001303,,
+302535920001304,,
+302535920001305,,
+302535920001306,,
+302535920001307,,
+302535920001308,,
+302535920001309,,
+302535920001310,,
+302535920001311,,
+302535920001312,,
+302535920001313,,
+302535920001314,,
+302535920001315,,
+302535920001316,,
+302535920001317,,
+302535920001318,,
+302535920001319,,
+302535920001320,,
+302535920001321,,
+302535920001322,,
+302535920001323,,
+302535920001324,,
+302535920001325,,
+302535920001326,,
+302535920001327,,
+302535920001328,,
+302535920001329,,
+302535920001330,,
+302535920001331,,
+302535920001332,,
+302535920001333,,
+302535920001334,,
+302535920001335,,
+302535920001336,,
+302535920001337,,
+302535920001338,,
+302535920001339,,
+302535920001340,,
+302535920001341,,
+302535920001342,,
+302535920001343,,
+302535920001344,,
+302535920001345,,
+302535920001346,,
+302535920001347,,
+302535920001348,,
+302535920001349,,
+302535920001350,,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
@@ -80,6 +128,8 @@ If you can delete it and still get this error; please send it and this log to th
 302535920000009,Missing Scenario Name,
 302535920000010,Missing Name,
 302535920000011,Missing Description,
+302535920001297,Toggle Flight Grid,
+302535920001298,Shows a square grid with terrain/objects shape.,
 302535920001291,Cancel: Use Files.hpk after you restart.,
 302535920001290,OK: Overwrite old files!,
 302535920001289,"ECM was updated and you are using the older files in ""%s"".
@@ -1054,6 +1104,8 @@ Mechanized: 1,000,000",
 302535920000578,Change waste storage depot capacity.,
 302535920000579,Storage Mechanized Depots,
 302535920000580,Change mechanized depot storage capacity.,
+302535920001299,Toggle Working On All Buildings,
+302535920001300,Does what it says; all buildings will have their working status toggled (fixes a couple issues).,
 302535920001295,Drones Not Repairing Domes,
 302535920001296,If your drones are just dumping polymers into the centre of your dome.,
 302535920000922,Fixes,
@@ -1064,9 +1116,7 @@ Mechanized: 1,000,000",
 302535920000248,Colonists Stuck Outside Service Buildings,
 302535920000464,Updating Rovers,
 302535920000964,Rover Infinite Loop,
-302535920000970,Removed unreachable,
 302535920000971,Sites,
-302535920000972,Buildings attached.,
 302535920001268,"RC Transports on a route have a certain tendency to get stuck and bog the game down (high speed feels like normal speed).
 
 This'll check for and stop any borked ones (it'll show a popup msg when it stops one).",
@@ -1100,10 +1150,11 @@ Should be safe to use without breaking anything.",
 302535920000591,Colonists Trying To Board Rocket Freezes Game,
 302535920000592,"Doesn't fix the underlying cause, but it works.",
 302535920000593,Remove Particles With Null Polylines,
-302535920000594,"It won't hurt anything to run this, as for when/if: I suppose if you have a broken looking object? or a meteor crashes into your mirror sphere power decoy thingy.",
+302535920000594,"It won't hurt anything to run this, as for when/if: I suppose if you have a broken looking object? or a meteor crashes into your mirror sphere power decoy thingy.
+This may remove some smoke stacks like the concrete extractors (just toggle working on any that don't have smoke).",
 302535920000595,Mirror Sphere Stuck,
 302535920000596,"If you have a mirror sphere stuck at the edge of the map, and it just won't die/move... (also removes any borked cone of a captured sphere).",
-302535920000597,Stutter With High FPS or Human Centipede,
+302535920000597,Stutter With High FPS,
 302535920000598,"If your units are doing stutter movement, but your FPS is fine then you likely have a unit with borked pathing (or there's one of those magical invisible walls in it's way).
 
 This also works for colonists practicing the human centipede.",
@@ -1148,7 +1199,7 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000641,Texture Compression,
 302535920000643,Higher Render Distance,
 302535920000645,Higher Shadow Distance,
-302535920001238,Removes any rocks for that smooth map feel (will take about 30 seconds).,
+302535920001238,Removes most rocks for that smooth map feel (will take about 30 seconds).,
 302535920000803,For rules separate with spaces: Hunger ColonyPrefab (or leave blank for none).,
 302535920000110,Min,
 302535920000941,Max,
