--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000970,Toggle Object Flash,
-302535920000972,Flashes object being examined.,
 302535920001301,,
 302535920001302,,
 302535920001303,,
@@ -214,7 +212,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001233,Launches rocket without asking.,
 302535920001234,Double the amount this %s can hold.,
 302535920001236,Double amount of reneagades this station can negate (currently: %s) < Reselect to update amount.,
-302535920000721,Checkbox,
+302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
 302535920000734,Clear Log,
 302535920001026,Show File Log,
@@ -236,6 +234,8 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
 302535920000865,Toggle Trans,
+302535920000970,Toggle Object Flash,
+302535920000972,Flashes object being examined.,
 302535920001057,Data,
 302535920001257,Auto-refresh list every second.,
 302535920001239,Functions,
