Expanded Cheat Menu:
Changed:
Exec Code:
> Multi line text support.
> Now checks clipboard content before adding ChoGGi.CurObj.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,5 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001301,Edit Text,
+302535920000051,,
 302535920001302,,
 302535920001303,,
 302535920001304,,
@@ -212,6 +212,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001233,Launches rocket without asking.,
 302535920001234,Double the amount this %s can hold.,
 302535920001236,Double amount of reneagades this station can negate (currently: %s) < Reselect to update amount.,
+302535920001301,Edit Text,
 302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
 302535920000734,Clear Log,
@@ -282,10 +283,10 @@ Which you can then mess around with some more in the console.",
 302535920000070,"Shows list of attachments. This %s has %s.
 
 Press %s to hide markers.",
-302535920000040,Exec Code on,
-302535920000051,Exec,
-302535920000072,Paste or type code to be executed here.,
-302535920000073,Exec and close dialog (Enter can also be used).,
+302535920000040,Exec Code,
+302535920000072,"Paste or type code to be executed here.
+Press Ctrl-Enter or Shift-Enter to execute code.",
+302535920000073,Exec code (Ctrl-Enter or Shift-Enter to execute code).,
 302535920000075,Insert Obj,
 302535920000076,At caret position inserts: ChoGGi.CurObj,
 302535920000068,Filter Text,
