Expanded Cheat Menu:
Started work on ListChoiceCustomDialog.
Added link to gog version.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -292,7 +292,7 @@ Press Ctrl-Enter or Shift-Enter to execute code.",
 302535920000068,Filter Text,
 302535920000806,"Only show items containing this text.
 
-Press Enter to clear value.",
+Press Enter to show all items.",
 302535920000077,"You can enter a custom value to be applied.
 
 Warning: Entering the wrong value may crash the game or otherwise cause issues.",
