--- a/Mods ChoGGi/Show Mod Manager GoG (Linux OSX)/changes.txt
+++ b/Mods ChoGGi/Show Mod Manager GoG (Linux OSX)/changes.txt
@@ -1,3 +1,6 @@
+0.7
+Da Vinci Update.
+More durable checking.
 0.6
 Switched from checking Platform (.steam or .pc or .linux or .osx) to (.desktop).
 0.5
