Expanded Cheat Menu:
Cleaned up some code.

Added:
Examine>Tools>Find: Search for text within object.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,10 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000081,,
-302535920001302,,
-302535920001303,,
-302535920001304,,
-302535920001305,,
-302535920001306,,
 302535920001307,,
 302535920001308,,
 302535920001309,,
@@ -52,6 +46,8 @@ ID,Text,Translation,Old Translation,Gender
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920001302,Find,
+302535920001303,Search for text within %s.,
 302535920000306,Everything,
 302535920000242,Modify ECM Files,
 302535920001167,Use Ctrl/Shift for multiple selection.,
@@ -212,6 +208,9 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001233,Launches rocket without asking.,
 302535920001234,Double the amount this %s can hold.,
 302535920001236,Double amount of reneagades this station can negate (currently: %s) < Reselect to update amount.,
+302535920001305,Find Within,
+302535920001306,Enter text to find,
+302535920001304,Set how many tables within this table we check into (careful making it too large).,
 302535920001301,Edit Text,
 302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
@@ -1022,6 +1021,7 @@ The map disaster settings don't do jack (use ECM>Mission>Disasters).",
 302535920000550,RC Rover quick Transfer/Gather resources.,
 302535920000551,RC Transport Storage Capacity,
 302535920000552,Change amount of resources RC Transports can carry.,
+302535920000081,Workers,
 302535920000333,Building Info,
 302535920000345,Shows info about building in text above it.,
 302535920001280,Double-click to toggle text (updates every second).,
