Expanded Cheat Menu:
Cleaned up results for Find.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,5 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001307,,
 302535920001308,,
 302535920001309,,
 302535920001310,,
@@ -208,9 +207,10 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001233,Launches rocket without asking.,
 302535920001234,Double the amount this %s can hold.,
 302535920001236,Double amount of reneagades this station can negate (currently: %s) < Reselect to update amount.,
+302535920001307,L%s,
 302535920001305,Find Within,
 302535920001306,Enter text to find,
-302535920001304,Set how many tables within this table we check into (careful making it too large).,
+302535920001304,Set how many levels within this table we check into (careful making it too large).,
 302535920001301,Edit Text,
 302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
