--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,6 +1,6 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000473,,
-302535920000474,,
+302535920000473,Reload Shortcuts,
+302535920000474,Fiddling around in the editor mod can break the menu / shortcuts added by ECM (use this to fix).,
 302535920001308,,
 302535920001309,,
 302535920001310,,
