--- a/Mods ChoGGi/Portable Miner/changes.txt
+++ b/Mods ChoGGi/Portable Miner/changes.txt
@@ -1,9 +1,10 @@
+v0.5
+Da Vinci
+The not working signing will actually go away now.
 v0.4
 Added Idle Extractor popup.
 Now removes empty concrete deposit sign.
-
 v0.3
 Better rear aim.
-
 v0.2
 Made it easier to change entity/scale/time to mine (see near top of Script.lua).
